--- a/react/package.json
+++ b/react/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.5",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^7.2.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.2.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
